pod-security-policy/restrict-pod-labels/examples/labels-restricted.yaml
# Assert: 
#   Istio = yes
#   namespace purpose : solution
#   topology.istio.io/subzone: there-is-coffee-in-this-nebula
# result not pass 
apiVersion: v1
kind: Pod
metadata:  
  name: delta
  namespace: deltaquadrant
  labels:
    app.kubernetes.io/instance: delta-webapp
    topology.istio.io/subzone: there-is-coffee-in-this-nebula
  annotations:
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: '15020'
    prometheus.io/scrape: 'true'
