pod-security-policy/restrict-pod-labels/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: restrictpodlabels
spec:
  crd:
    spec:
      names:
        kind: RestrictPodLabels
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package restrictpodlabels

        violation[{"msg": msg, "details": {"pod_labels": not_allow}}] {
          disallowed := {label | label := input.parameters.labels[_]}
          provided := {label | input.review.object.metadata.labels[label]}

          # disallowed should be a non empty intersection of provided to return false
          not_allow  := provided & disallowed
          count(not_allow) > 0

          msg := sprintf("You are not allowed to use the following labels: %v", [not_allow])
        }
